instances/tekton/backstage/resource-generation/cloudpak/cp4i/ace/route/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ace-create
  namespace: tekton
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: ace-create
spec:
  to:
    kind: Service
    name: el-ace-create
  tls: null
  port:
    targetPort: http-listener
